@@ -644,6 +644,11 @@ rpmRC writeRPM(Header *hdrp, unsigned char ** pkgidp, const char *fileName,
 		/* XXX addition to header is too late to be displayed/sorted. */
 		/* Add prereq on rpm version that understands tar payloads */
 		(void) rpmlibNeedsFeature(h, "PayloadIsUstar", "4.4.4-1");
+	    } else
+	    if (!strcmp(payload_format, "ar")) {
+		/* XXX addition to header is too late to be displayed/sorted. */
+		/* Add prereq on rpm version that understands tar payloads */
+		(void) rpmlibNeedsFeature(h, "PayloadIsAr", "5.1-1");
 	    }
 
 	    he->tag = RPMTAG_PAYLOADFORMAT;
