@@ -1394,6 +1394,9 @@ static struct rpmlibProvides_s rpmlibProvides[] = {
     { "rpmlib(FileDigestParameterized)",    "4.4.6-1",
 	(RPMSENSE_RPMLIB|RPMSENSE_EQUAL),
     N_("file digests can be other than MD5.") },
+    { "rpmlib(PayloadIsAr)",		"5.1-1",
+	(RPMSENSE_RPMLIB|RPMSENSE_EQUAL),
+    N_("package payload can be in ar archive format.") },
     { NULL,				NULL, 0,	NULL }
 };
 
